Lesson 9 final commit

--- a/weather10Day_Forecast.html
+++ b/weather10Day_Forecast.html
@@ -4,8 +4,8 @@
     
 <!-- 
     Program Name:   Seminole Weather Channel
-    Author: 
-    Date: 
+    Author: Zachary Stein
+    Date: 4/23/16
     Filename:   weather10Day_Forecast.html
 -->
 
@@ -180,6 +180,110 @@
     <div class="col-sm-2"></div>
 </div>
 
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 4 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day4Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 4 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day4High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 5 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day5Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 5 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day5High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 6 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day6Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 6 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day6High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 7 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day7Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 7 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day7High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 8 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day8Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 8 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day8High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 9 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day9Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 9 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day9High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 10 Low:</b></h3>  
+      <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day10Low"> </p></div> 
+      <div class="container"></div>
+    </div>
+ 
+    <div class="col-sm-4" style="background-color:lightpink;"><h3 class="list-group-item-heading"><b>Day 10 High:</b></h3> 
+       <div class="well" well-sm><p class="list-group-item-text lead text-primary" id="Day10High"> </p></div> 
+       <div class="container"></div>
+    </div>
+
+    <div class="col-sm-2"></div>
+</div>
 <!--  STOP COPY HERE TO ADD ADDITIONAL ROWS FOR WEATHER FORECAST FOR DAYS 4-10 -->
 
 
